--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
   <title>CafeteriaDanko</title>
   <meta name="description" content="Proyecto 3 de la cafeteria de Danko">
     <meta name="keywords" content="html,css,javascript">
-    <meta name="author"content="Danko">
+    <meta name="author" content="Danko">
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="shortcut icon" href="favicon_coffee_bean.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="page">
   Testing...
-  
+
 <header class="header">
 
 </header>
