--- a/index.html
+++ b/index.html
@@ -30,16 +30,75 @@
 </head>
 <body>
 <div class="page">
-  Testing...
-
 <header class="header">
 
+
+  <nav class="nav">
+
+    <img src="images/logo_coffeeshop_dark.svg"  alt="Triple Espresso"  class="nav__logo"/>
+
+    <ul class="nav__links">
+      <li>
+        <a href="#recipes" class="nav__link">Recetas</a>
+      </li>
+      <li>
+        <a href="#reservation" class="nav__link">Reserva una mesa</a>
+      </li>
+      <li>
+        <a href="#menu" class="nav__link">Menu</a>
+      </li>
+      <li>
+        <a href="#contactos" class="nav__link">Contactos</a>
+      </li>
+
+    </ul>
+    </nav>
+    <h1 class="header__title"> <span class="header__span-accent" style="display: block;">Cafe de especialidad</span>  en Triple Peaks
+    </h1>
+    <p class="header__description">¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café para darte energía y una vibra acogedora que motivarán tu creatividad.</p>
+    <img class="header__image" src="images/inside_coffee_shop.png" alt="imagen menu">
+    <div class="header__footer">
+      <div class="header__footer_paragraph-hora">
+        Horario:<br>
+        Lunes a Viernes (de 10:00 a 19:00)<br>
+        Sábados y Domingos (de 11:00 a 18:00)</div>
+      <div class="header__footer_paragraph-direc"> Avenida del Éxito 200, Ciudad Triple Peaks </div>
+    </div>
 </header>
 <main class="content">
-  <section class="recipes"></section>
-  <section class="reservation"></section>
-  <section class="menu"></section>
-  <section class="about"></section>
+  <section id="recipes" class="recipes">
+    <div class="recipes__title">
+      <h2>Recetas</h2>
+      <div class="recipes__subtitle">
+      <p>Echa un vistazo a algunas de nuestras recetas para que elabores tu propio café.</p>
+      </div>
+    </div>
+
+    <div class=" recipes__videos">
+      <div class=" recipes__videos_video-item">
+        <div class=" recipes__videos_iframe">
+          <iframe width="480" height="273" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class=" recipes__videos_video-caption">
+          <p>Receta en Aeropress</p>
+          <p>~5 min</p>
+        </div>
+      </div>
+      <div class=" recipes__videos_video-item">
+        <div class=" recipes__videos_iframe">
+          <iframe width="480" height="273" src="https://www.youtube.com/embed/st571DYYTR8" title="La mejor técnica de prensa francesa" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="recipes__videos_video-caption">
+          <p>Receta en cafetera francesa</p>
+          <p>~15 min</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <section id="reservation" class="reservation"></section>
+  <section id="menu" class="menu"></section>
+  <section id="contactos" class="about"></section>
 </main>
 <footer class="footer">
 
