--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <p class="header__description">¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café para darte energía y una vibra acogedora que motivarán tu creatividad.</p>
     <img class="header__image" src="images/inside_coffee_shop.png" alt="imagen menu">
     <div class="header__footer">
-      <div class="header__footer_paragraph-hora">
+      <div class="header__footer header__footer_paragraph-hora">
         Horario:<br>
         Lunes a Viernes (de 10:00 a 19:00)<br>
         Sábados y Domingos (de 11:00 a 18:00)</div>
-      <div class="header__footer_paragraph-direc"> Avenida del Éxito 200, Ciudad Triple Peaks </div>
+      <div class="header__footer header__footer_paragraph-direc"> Avenida del Éxito 200, Ciudad Triple Peaks </div>
     </div>
 </header>
 <main class="content">
@@ -75,20 +75,20 @@
     </div>
 
     <div class=" recipes__videos">
-      <div class=" recipes__videos_video-item">
-        <div class=" recipes__videos_iframe">
-          <iframe width="480" height="273" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <div class="recipes__videos recipes__videos_video-item">
+        <div class=" recipes__videos recipes__videos_iframe">
+          <iframe class="recipes__iframe" width="480" height="273" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="The Ultimate AeroPress Technique (Episode #3)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-        <div class=" recipes__videos_video-caption">
+        <div class=" recipes__videos recipes__videos_video-caption">
           <p>Receta en Aeropress</p>
           <p>~5 min</p>
         </div>
       </div>
-      <div class=" recipes__videos_video-item">
-        <div class=" recipes__videos_iframe">
-          <iframe width="480" height="273" src="https://www.youtube.com/embed/st571DYYTR8" title="La mejor técnica de prensa francesa" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <div class=" recipes__videos recipes__videos_video-item">
+        <div class=" recipes__videos recipes__videos_iframe">
+          <iframe class="recipes__iframe" width="480" height="273" src="https://www.youtube.com/embed/st571DYYTR8" title="La mejor técnica de prensa francesa" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-        <div class="recipes__videos_video-caption">
+        <div class="recipes__videos recipes__videos_video-caption">
           <p>Receta en cafetera francesa</p>
           <p>~15 min</p>
         </div>
