--- a/index.html
+++ b/index.html
@@ -96,7 +96,34 @@
     </div>
 
   </section>
-  <section id="reservation" class="reservation"></section>
+  <section id="reservation" class="reservation">
+
+         <h2 class=" reservation__title">Reservar una mesa</h2>
+
+       <form class=" reservation__form ">
+        <fieldset class="reservation_form_container">
+
+          <label for="Nombre" class="reservation__label">Nombre *</label>
+            <input type="text" class="reservation__input" placeholder="Nombre Apellido" name="Nombre" required>
+
+          <label for="numero" class=" reservation__label">Número de comensales *</label>
+            <input type="number" class="reservation__input" min="1" max="8" placeholder="1-8" name="numero" required>
+
+          <label for="fecha-hora" class=" reservation__label">Fecha y hora *</label>
+            <input type="datetime-local" class="reservation__input" name="fecha-hora"  required>
+
+          <label for="email" class=" reservation__label">Tu correo electrónico *</label>
+            <input type="email" class="reservation__input" placeholder="email@email.com" name="email" required>
+          </fieldset>
+        <fieldset class="checkbox">
+          <button type="submit" class="reservation__button">Reservar una mesa</button>
+
+          <label for="acept" class="reservation__label_checkbox">
+          <input type="checkbox" class="reservation__checkbox" id="acept" name="acept" required>
+          Acepto los términos de uso</label>
+          </fieldset>
+      </form>
+  </section>
   <section id="menu" class="menu"></section>
   <section id="contactos" class="about"></section>
 </main>
