--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
          <h2 class=" reservation__title">Reservar una mesa</h2>
 
        <form class=" reservation__form ">
-        <fieldset class="reservation__form reservation_form_container">
+        <fieldset class="reservation__form reservation__form_container">
 
           <label for="Nombre" class="reservation__label">Nombre *</label>
             <input type="text" class="reservation__input" placeholder="Nombre Apellido" name="Nombre" id="Nombre" required>
@@ -118,7 +118,7 @@
         <fieldset class="checkbox">
           <button type="submit" class="reservation__button">Reservar una mesa</button>
 
-          <label for="acept" class="checkbox reservation__label_checkbox">
+          <label for="acept" class=" checkbox__label_checkbox">
           <input type="checkbox" class="reservation__checkbox" id="acept" name="acept" required>
           Acepto los términos de uso</label>
           </fieldset>
