ya peee ahora si

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
           <label for="email" class=" reservation__label">Tu correo electrónico *</label>
             <input type="email" class="reservation__input" placeholder="email@email.com" name="email" id="email" required>
           </fieldset>
-        <fieldset class="checkbox__label">
+        <fieldset class="footer__label">
           <button type="submit" class="reservation__button">Reservar una mesa</button>
 
-          <label for="acept" class=" checkbox__label checkbox__label_terminos">
+          <label for="acept" class=" footer__label footer__label_terminos">
           <input type="checkbox" class="reservation__checkbox" id="acept" name="acept" required>
           Acepto los términos de uso</label>
           </fieldset>
