--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
          <h2 class=" reservation__title">Reservar una mesa</h2>
 
-       <form class=" reservation__form ">
+       <form class=" form reservation__form ">
         <fieldset class="reservation__form reservation__form_container">
 
           <label for="Nombre" class="reservation__label">Nombre *</label>
