actualizado media noche 15 marzo

--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 <body>
 <div class="page">
 <header class="header">
-
-
   <nav class="nav">
 
     <img src="images/logo_coffeeshop_dark.svg"  alt="Triple Espresso"  class="nav__logo"/>
@@ -120,6 +118,7 @@
           <label for="acept" class=" reservation__footer reservation__footer_label">
           <input type="checkbox" class="reservation__checkbox" id="acept" name="acept" required>
           Acepto los términos de uso</label>
+
           </fieldset>
       </form>
   </section>
@@ -140,7 +139,7 @@
             <p class="menu__item_name">Tamaño familiar (700 ml, descafeinado)</p><span class="menu__separation"></span><p class="menu__item_price"> $1.75</p></li>
           <li class="menu__item_card">
             <p class="menu__item_name">Café helado (470 ml)</p><span class="menu__separation"></span><p class="menu__item_price">$1.25</p></li>
-          </p>
+
         </ul>
         <ul class=" menu__cards_content ">
           <h3 class="card__title">Espresso</h3>
@@ -174,7 +173,7 @@
   <section id="contactos" class="about">
     <h2 class="about__title">Sobre la cafetería</h2>
     <div class="about__circle"></div>
-    <div class="about__content about">
+    <div class="about__content">
 
     <p class="about__content_text">Nuestra cafetería se ubica en la Biblioteca Triple Peaks. Cuenta con 6 mesas y WiFi gratuito.</p>
 
@@ -193,7 +192,7 @@
     <div class="footer__columns footer__columns_content-social" >
     <h3 class="footer__column-heading">Redes Sociales</h3>
     <ul class="footer__list">
-      <li class="footer__list-item">
+      <li class=" footer__list-item">
         <a class="footer__column-link" href="#">
         <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Imagen Facebook"/>
         Facebook
@@ -202,13 +201,13 @@
       <li class="footer__list-item">
         <a class="footer__column-link" href="#">
         <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Imagen Instagram"/>
-        Instagram
-      </a>
+        Instagram</a>
       </li>
-    </ul>
+      </ul>
+    </div>
   </div>
-
   <p class="footer__copyright"> © 2024 Danko Gargurevich</p>
+
 </footer>
 </div>
 </body>
