--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
        y usamos tazas biodegradables. Todos los tés de nuestra colección a $2/taza.</p>
     <div class="menu__cards">
         <ul class=" menu__cards_content ">
-          <p class="card__title">De filtro</p>
+          <li class="card__title">De filtro</li>
           <li class="menu__item_card">
             <p class="menu__item_name"> Regular (350 ml)</p><span class="menu__separation"></span><p class="menu__item_price">$1</p></li>
           <li class="menu__item_card">
@@ -142,7 +142,7 @@
 
         </ul>
         <ul class=" menu__cards_content ">
-          <p class="card__title">Espresso</p>
+          <li class="card__title">Espresso</li>
           <li class="menu__item_card">
             <p class="menu__item_name">Macchiato</p> <span class="menu__separation"></span><p class="menu__item_price">$2.25</p></li>
           <li class="menu__item_card">
@@ -153,7 +153,7 @@
             <p class="menu__item_name"> Amanecer en Bay Area (descafeinado)</p> <span class="menu__separation"></span><p class="menu__item_price">$10</p></li>
         </ul>
         <ul class=" menu__cards_content">
-          <p class="card__title">Repostería</p>
+          <li class="card__title">Repostería</li>
           <li class="menu__item_card">
             <p class="menu__item_name">Croissant de almendra </p><span class="menu__separation"></span><p class="menu__item_price">$2</p></li>
           <li class="menu__item_card">
