--- a/index.html
+++ b/index.html
@@ -127,45 +127,45 @@
     <p class="menu__description">Elaboramos nuestro café con granos certificados de comercio justo, tostados localmente,<br>
        y usamos tazas biodegradables. Todos los tés de nuestra colección a $2/taza.</p>
     <div class="menu__cards">
-        <ul class=" menu__cards_content ">
-          <li class="card__title">De filtro</li>
-          <li class="menu__item_card">
-            <p class="menu__item_name"> Regular (350 ml)</p><span class="menu__separation"></span><p class="menu__item_price">$1</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Grande (470 ml) </p><span class="menu__separation"></span> <p class="menu__item_price"> $1.25</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">XL (590 ml)</p><span class="menu__separation"></span> <p class="menu__item_price">$1.5</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Tamaño familiar (700 ml, descafeinado)</p><span class="menu__separation"></span><p class="menu__item_price"> $1.75</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Café helado (470 ml)</p><span class="menu__separation"></span><p class="menu__item_price">$1.25</p></li>
+        <ul class=" menu__cards menu__cards_content ">
+          <li class="menu__card-title">De filtro</li>
+          <li class="menu__item-card">
+            <p class=menu__item-name"> Regular (350 ml)</p><span class="menu__separation"></span><p class="menu__item-price">$1</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Grande (470 ml) </p><span class="menu__separation"></span> <p class="menu__item-price"> $1.25</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">XL (590 ml)</p><span class="menu__separation"></span> <p class="menu__item-price">$1.5</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Tamaño familiar (700 ml, descafeinado)</p><span class="menu__separation"></span><p class="menu__item-price"> $1.75</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Café helado (470 ml)</p><span class="menu__separation"></span><p class="menu__item-price">$1.25</p></li>
 
         </ul>
         <ul class=" menu__cards_content ">
-          <li class="card__title">Espresso</li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Macchiato</p> <span class="menu__separation"></span><p class="menu__item_price">$2.25</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Cortado</p> <span class="menu__separation"></span><p class="menu__item_price">$2.5</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name"> Mocha</p> <span class="menu__separation"></span><p class="menu__item_price">$3</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name"> Amanecer en Bay Area (descafeinado)</p> <span class="menu__separation"></span><p class="menu__item_price">$10</p></li>
+          <li class="menu__card-title">Espresso</li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Macchiato</p> <span class="menu__separation"></span><p class="menu__item-price">$2.25</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Cortado</p> <span class="menu__separation"></span><p class="menu__item-price">$2.5</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name"> Mocha</p> <span class="menu__separation"></span><p class="menu__item-price">$3</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name"> Amanecer en Bay Area (descafeinado)</p> <span class="menu__separation"></span><p class="menu__item-price">$10</p></li>
         </ul>
         <ul class=" menu__cards_content">
-          <li class="card__title">Repostería</li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Croissant de almendra </p><span class="menu__separation"></span><p class="menu__item_price">$2</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Pan de banana</p> <span class="menu__separation"></span><p class="menu__item_price">$1.75</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Tarta de limón</p> <span class="menu__separation"></span><p class="menu__item_price">$3</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Pastel Blue velvet</p> <span class="menu__separation"></span><p class="menu__item_price">$3.75</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Cookie web</p> <span class="menu__separation"></span><p class="menu__item_price">$2</p></li>
-          <li class="menu__item_card">
-            <p class="menu__item_name">Baguette fresco</p> <span class="menu__separation"></span><p class="menu__item_price">$0.25</p></li>
+          <li class="menu__card-title">Repostería</li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Croissant de almendra </p><span class="menu__separation"></span><p class="menu__item-price">$2</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Pan de banana</p> <span class="menu__separation"></span><p class="menu__item-price">$1.75</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Tarta de limón</p> <span class="menu__separation"></span><p class="menu__item-price">$3</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Pastel Blue velvet</p> <span class="menu__separation"></span><p class="menu__item-price">$3.75</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Cookie web</p> <span class="menu__separation"></span><p class="menu__item-price">$2</p></li>
+          <li class="menu__item-card">
+            <p class=menu__item-name">Baguette fresco</p> <span class="menu__separation"></span><p class="menu__item-price">$0.25</p></li>
         </ul>
       </div>
 
@@ -175,11 +175,11 @@
     <div class="about__circle"></div>
     <div class="about__content">
 
-    <p class="about__content_text">Nuestra cafetería se ubica en la Biblioteca Triple Peaks. Cuenta con 6 mesas y WiFi gratuito.</p>
+    <p class="about__content-text">Nuestra cafetería se ubica en la Biblioteca Triple Peaks. Cuenta con 6 mesas y WiFi gratuito.</p>
 
-    <p class="about__content_text"> Nuestra principal misión es mantener a nuestros comensales cómodos y con energía.</p>
+    <p class="about__content-text"> Nuestra principal misión es mantener a nuestros comensales cómodos y con energía.</p>
 
-    <p class="about__content_text">Además, buscamos reducir nuestro impacto ambiental, así que no vendemos tazas de un solo uso. ¡Pero puedes comprar una de nuestras tazas reutilizables!</p>
+    <p class="about__content-text">Además, buscamos reducir nuestro impacto ambiental, así que no vendemos tazas de un solo uso. ¡Pero puedes comprar una de nuestras tazas reutilizables!</p>
 
     </div>
   </section>
