--- a/index.html
+++ b/index.html
@@ -130,42 +130,42 @@
         <ul class=" menu__cards menu__cards_content ">
           <li class="menu__card-title">De filtro</li>
           <li class="menu__item-card">
-            <p class=menu__item-name"> Regular (350 ml)</p><span class="menu__separation"></span><p class="menu__item-price">$1</p></li>
+            <p class="menu__item-name"> Regular (350 ml)</p><span class="menu__separation"></span><p class="menu__item-price">$1</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Grande (470 ml) </p><span class="menu__separation"></span> <p class="menu__item-price"> $1.25</p></li>
+            <p class="menu__item-name">Grande (470 ml) </p><span class="menu__separation"></span> <p class="menu__item-price"> $1.25</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">XL (590 ml)</p><span class="menu__separation"></span> <p class="menu__item-price">$1.5</p></li>
+            <p class="menu__item-name">XL (590 ml)</p><span class="menu__separation"></span> <p class="menu__item-price">$1.5</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Tamaño familiar (700 ml, descafeinado)</p><span class="menu__separation"></span><p class="menu__item-price"> $1.75</p></li>
+            <p class="menu__item-name">Tamaño familiar (700 ml, descafeinado)</p><span class="menu__separation"></span><p class="menu__item-price"> $1.75</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Café helado (470 ml)</p><span class="menu__separation"></span><p class="menu__item-price">$1.25</p></li>
+            <p class="menu__item-name">Café helado (470 ml)</p><span class="menu__separation"></span><p class="menu__item-price">$1.25</p></li>
 
         </ul>
-        <ul class=" menu__cards_content ">
+        <ul class=" menu__cards menu__cards_content ">
           <li class="menu__card-title">Espresso</li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Macchiato</p> <span class="menu__separation"></span><p class="menu__item-price">$2.25</p></li>
+            <p class="menu__item-name">Macchiato</p> <span class="menu__separation"></span><p class="menu__item-price">$2.25</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Cortado</p> <span class="menu__separation"></span><p class="menu__item-price">$2.5</p></li>
+            <p class="menu__item-name">Cortado</p> <span class="menu__separation"></span><p class="menu__item-price">$2.5</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name"> Mocha</p> <span class="menu__separation"></span><p class="menu__item-price">$3</p></li>
+            <p class="menu__item-name"> Mocha</p> <span class="menu__separation"></span><p class="menu__item-price">$3</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name"> Amanecer en Bay Area (descafeinado)</p> <span class="menu__separation"></span><p class="menu__item-price">$10</p></li>
+            <p class="menu__item-name"> Amanecer en Bay Area (descafeinado)</p> <span class="menu__separation"></span><p class="menu__item-price">$10</p></li>
         </ul>
-        <ul class=" menu__cards_content">
+        <ul class=" menu__cards menu__cards_content">
           <li class="menu__card-title">Repostería</li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Croissant de almendra </p><span class="menu__separation"></span><p class="menu__item-price">$2</p></li>
+            <p class="menu__item-name">Croissant de almendra </p><span class="menu__separation"></span><p class="menu__item-price">$2</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Pan de banana</p> <span class="menu__separation"></span><p class="menu__item-price">$1.75</p></li>
+            <p class="menu__item-name">Pan de banana</p> <span class="menu__separation"></span><p class="menu__item-price">$1.75</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Tarta de limón</p> <span class="menu__separation"></span><p class="menu__item-price">$3</p></li>
+            <p class="menu__item-name">Tarta de limón</p> <span class="menu__separation"></span><p class="menu__item-price">$3</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Pastel Blue velvet</p> <span class="menu__separation"></span><p class="menu__item-price">$3.75</p></li>
+            <p class="menu__item-name">Pastel Blue velvet</p> <span class="menu__separation"></span><p class="menu__item-price">$3.75</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Cookie web</p> <span class="menu__separation"></span><p class="menu__item-price">$2</p></li>
+            <p class="menu__item-name">Cookie web</p> <span class="menu__separation"></span><p class="menu__item-price">$2</p></li>
           <li class="menu__item-card">
-            <p class=menu__item-name">Baguette fresco</p> <span class="menu__separation"></span><p class="menu__item-price">$0.25</p></li>
+            <p class="menu__item-name">Baguette fresco</p> <span class="menu__separation"></span><p class="menu__item-price">$0.25</p></li>
         </ul>
       </div>
 
