--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="#reservation" class="nav__link">Reserva una mesa</a>
       </li>
       <li>
-        <a href="#menu" class="nav__link">Menu</a>
+        <a href="#card" class="nav__link">Menu</a>
       </li>
       <li>
         <a href="#contactos" class="nav__link">Contactos</a>
@@ -98,25 +98,25 @@
          <h2 class=" reservation__title">Reservar una mesa</h2>
 
        <form class=" form reservation__form ">
-        <fieldset class="reservation__form reservation__form_container">
+        <fieldset class="form__container">
 
-          <label for="Nombre" class="reservation__label">Nombre *</label>
-            <input type="text" class="reservation__input" placeholder="Nombre Apellido" name="Nombre" id="Nombre" required>
+          <label for="Nombre" class="form__label">Nombre *</label>
+            <input type="text" class="form__input" placeholder="Nombre Apellido" name="Nombre" id="Nombre" required>
 
-          <label for="numero" class=" reservation__label">Número de comensales *</label>
-            <input type="number" class="reservation__input" min="1" max="8" placeholder="1-8" name="numero" id="numero" required>
+          <label for="numero" class=" form__label">Número de comensales *</label>
+            <input type="number" class="form__input" min="1" max="8" placeholder="1-8" name="numero" id="numero" required>
 
-          <label for="fecha-hora" class=" reservation__label">Fecha y hora *</label>
-            <input type="datetime-local" class="reservation__input" name="fecha-hora"  id="fecha-hora" required>
+          <label for="fecha-hora" class=" form__label">Fecha y hora *</label>
+            <input type="datetime-local" class="form__input" name="fecha-hora"  id="fecha-hora" required>
 
-          <label for="email" class=" reservation__label">Tu correo electrónico *</label>
-            <input type="email" class="reservation__input" placeholder="email@email.com" name="email" id="email" required>
+          <label for="email" class=" form__label">Tu correo electrónico *</label>
+            <input type="email" class="form__input" placeholder="email@email.com" name="email" id="email" required>
           </fieldset>
-        <fieldset class="reservation__footer ">
-          <button type="submit" class="reservation__button">Reservar una mesa</button>
+        <fieldset class="form__footer">
+          <button type="submit" class="form__button">Reservar una mesa</button>
 
-          <label for="acept" class=" reservation__footer reservation__footer_label">
-          <input type="checkbox" class="reservation__checkbox" id="acept" name="acept" required>
+          <label for="acept" class=" form__footer form__footer_label">
+          <input type="checkbox" class="form__checkbox" id="acept" name="acept" required>
           Acepto los términos de uso</label>
 
           </fieldset>
@@ -124,48 +124,48 @@
   </section>
   <section id="menu" class="menu">
    <h2 class="menu__title">Menú</h2>
-    <p class="menu__description">Elaboramos nuestro café con granos certificados de comercio justo, tostados localmente,<br>
+    <p class="menu__subtitle">Elaboramos nuestro café con granos certificados de comercio justo, tostados localmente,<br>
        y usamos tazas biodegradables. Todos los tés de nuestra colección a $2/taza.</p>
     <div class="menu__cards">
-        <ul class=" menu__cards menu__cards_content ">
-          <li class="menu__card-title">De filtro</li>
-          <li class="menu__item-card">
-            <p class="menu__item-name"> Regular (350 ml)</p><span class="menu__separation"></span><p class="menu__item-price">$1</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Grande (470 ml) </p><span class="menu__separation"></span> <p class="menu__item-price"> $1.25</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">XL (590 ml)</p><span class="menu__separation"></span> <p class="menu__item-price">$1.5</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Tamaño familiar (700 ml, descafeinado)</p><span class="menu__separation"></span><p class="menu__item-price"> $1.75</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Café helado (470 ml)</p><span class="menu__separation"></span><p class="menu__item-price">$1.25</p></li>
+        <ul class=" cards__content ">
+          <li class="card__title">De filtro</li>
+          <li class="card__item">
+            <p class="card__item-name"> Regular (350 ml)</p><span class="card__separation"></span><p class="card__item-price">$1</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Grande (470 ml) </p><span class="card__separation"></span> <p class="card__item-price"> $1.25</p></li>
+          <li class="card__item">
+            <p class="card__item-name">XL (590 ml)</p><span class="card__separation"></span> <p class="card__item-price">$1.5</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Tamaño familiar (700 ml, descafeinado)</p><span class="card__separation"></span><p class="card__item-price"> $1.75</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Café helado (470 ml)</p><span class="card__separation"></span><p class="card__item-price">$1.25</p></li>
 
         </ul>
-        <ul class=" menu__cards menu__cards_content ">
-          <li class="menu__card-title">Espresso</li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Macchiato</p> <span class="menu__separation"></span><p class="menu__item-price">$2.25</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Cortado</p> <span class="menu__separation"></span><p class="menu__item-price">$2.5</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name"> Mocha</p> <span class="menu__separation"></span><p class="menu__item-price">$3</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name"> Amanecer en Bay Area (descafeinado)</p> <span class="menu__separation"></span><p class="menu__item-price">$10</p></li>
+        <ul class=" cards__content ">
+          <li class="card__title">Espresso</li>
+          <li class="card__item">
+            <p class="card__item-name">Macchiato</p> <span class="card__separation"></span><p class="card__item-price">$2.25</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Cortado</p> <span class="card__separation"></span><p class="card__item-price">$2.5</p></li>
+          <li class="card__item">
+            <p class="card__item-name"> Mocha</p> <span class="card__separation"></span><p class="card__item-price">$3</p></li>
+          <li class="card__item">
+            <p class="card__item-name"> Amanecer en Bay Area (descafeinado)</p> <span class="card__separation"></span><p class="card__item-price">$10</p></li>
         </ul>
-        <ul class=" menu__cards menu__cards_content">
-          <li class="menu__card-title">Repostería</li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Croissant de almendra </p><span class="menu__separation"></span><p class="menu__item-price">$2</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Pan de banana</p> <span class="menu__separation"></span><p class="menu__item-price">$1.75</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Tarta de limón</p> <span class="menu__separation"></span><p class="menu__item-price">$3</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Pastel Blue velvet</p> <span class="menu__separation"></span><p class="menu__item-price">$3.75</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Cookie web</p> <span class="menu__separation"></span><p class="menu__item-price">$2</p></li>
-          <li class="menu__item-card">
-            <p class="menu__item-name">Baguette fresco</p> <span class="menu__separation"></span><p class="menu__item-price">$0.25</p></li>
+        <ul class=" cards__content">
+          <li class="card__title">Repostería</li>
+          <li class="card__item">
+            <p class="card__item-name">Croissant de almendra </p><span class="card__separation"></span><p class="card__item-price">$2</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Pan de banana</p> <span class="card__separation"></span><p class="card__item-price">$1.75</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Tarta de limón</p> <span class="card__separation"></span><p class="card__item-price">$3</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Pastel Blue velvet</p> <span class="card__separation"></span><p class="card__item-price">$3.75</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Cookie web</p> <span class="card__separation"></span><p class="card__item-price">$2</p></li>
+          <li class="card__item">
+            <p class="card__item-name">Baguette fresco</p> <span class="card__separation"></span><p class="card__item-price">$0.25</p></li>
         </ul>
       </div>
 
