--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
    <h2 class="menu__title">Menú</h2>
     <p class="menu__subtitle">Elaboramos nuestro café con granos certificados de comercio justo, tostados localmente,<br>
        y usamos tazas biodegradables. Todos los tés de nuestra colección a $2/taza.</p>
-    <div class="menu__cards">
+    <div class="menu__cards cards">
         <ul class=" cards__content ">
           <li class="card__title">De filtro</li>
           <li class="card__item">
