--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
    <h2 class="menu__title">Menú</h2>
     <p class="menu__subtitle">Elaboramos nuestro café con granos certificados de comercio justo, tostados localmente,<br>
        y usamos tazas biodegradables. Todos los tés de nuestra colección a $2/taza.</p>
-    <div class="menu__cards ">
-        <ul class=" cards card__content ">
+    <div class="menu__card ">
+        <ul class=" card card__content ">
           <li class="card__title">De filtro</li>
           <li class="card__item">
             <p class="card__item-name"> Regular (350 ml)</p><span class="card__separation"></span><p class="card__item-price">$1</p></li>
@@ -141,7 +141,7 @@
             <p class="card__item-name">Café helado (470 ml)</p><span class="card__separation"></span><p class="card__item-price">$1.25</p></li>
 
         </ul>
-        <ul class=" cards card__content ">
+        <ul class=" card card__content ">
           <li class="card__title">Espresso</li>
           <li class="card__item">
             <p class="card__item-name">Macchiato</p> <span class="card__separation"></span><p class="card__item-price">$2.25</p></li>
@@ -152,7 +152,7 @@
           <li class="card__item">
             <p class="card__item-name"> Amanecer en Bay Area (descafeinado)</p> <span class="card__separation"></span><p class="card__item-price">$10</p></li>
         </ul>
-        <ul class=" cards card__content">
+        <ul class=" card card__content">
           <li class="card__title">Repostería</li>
           <li class="card__item">
             <p class="card__item-name">Croissant de almendra </p><span class="card__separation"></span><p class="card__item-price">$2</p></li>
