--- a/index.html
+++ b/index.html
@@ -126,48 +126,57 @@
    <h2 class="menu__title">Menú</h2>
     <p class="menu__subtitle">Elaboramos nuestro café con granos certificados de comercio justo, tostados localmente,<br>
        y usamos tazas biodegradables. Todos los tés de nuestra colección a $2/taza.</p>
-    <div class="menu__card ">
-        <ul class=" card card__content ">
-          <li class="card__title">De filtro</li>
+    <div class="menu__cards ">
+      <div class="card">
+          <p class="card__title">De filtro</p>
+          <ul class="  card__content ">
           <li class="card__item">
-            <p class="card__item-name"> Regular (350 ml)</p><span class="card__separation"></span><p class="card__item-price">$1</p></li>
+            <p class="card__item-name"> Regular (350 ml)</p><span class="card__separation"></span>$1</li>
           <li class="card__item">
-            <p class="card__item-name">Grande (470 ml) </p><span class="card__separation"></span> <p class="card__item-price"> $1.25</p></li>
+            <p class="card__item-name">Grande (470 ml) </p><span class="card__separation"></span>  $1.25</li>
           <li class="card__item">
-            <p class="card__item-name">XL (590 ml)</p><span class="card__separation"></span> <p class="card__item-price">$1.5</p></li>
+            <p class="card__item-name">XL (590 ml)</p><span class="card__separation"></span> $1.5</li>
           <li class="card__item">
-            <p class="card__item-name">Tamaño familiar (700 ml, descafeinado)</p><span class="card__separation"></span><p class="card__item-price"> $1.75</p></li>
+            <p class="card__item-name">Tamaño familiar (700 ml, descafeinado)</p><span class="card__separation"></span> $1.75</li>
           <li class="card__item">
-            <p class="card__item-name">Café helado (470 ml)</p><span class="card__separation"></span><p class="card__item-price">$1.25</p></li>
+            <p class="card__item-name">Café helado (470 ml)</p><span class="card__separation"></span>$1.25</li>
+          </ul>
+          </div>
 
-        </ul>
-        <ul class=" card card__content ">
-          <li class="card__title">Espresso</li>
+      <div class="card">
+
+          <p class="card__title">Espresso</p>
+          <ul class="  card__content ">
           <li class="card__item">
-            <p class="card__item-name">Macchiato</p> <span class="card__separation"></span><p class="card__item-price">$2.25</p></li>
+            <p class="card__item-name">Macchiato</p> <span class="card__separation"></span>$2.25</li>
           <li class="card__item">
-            <p class="card__item-name">Cortado</p> <span class="card__separation"></span><p class="card__item-price">$2.5</p></li>
+            <p class="card__item-name">Cortado</p> <span class="card__separation"></span>$2.5</li>
           <li class="card__item">
-            <p class="card__item-name"> Mocha</p> <span class="card__separation"></span><p class="card__item-price">$3</p></li>
+            <p class="card__item-name"> Mocha</p> <span class="card__separation"></span>$3</li>
           <li class="card__item">
-            <p class="card__item-name"> Amanecer en Bay Area (descafeinado)</p> <span class="card__separation"></span><p class="card__item-price">$10</p></li>
-        </ul>
-        <ul class=" card card__content">
-          <li class="card__title">Repostería</li>
-          <li class="card__item">
-            <p class="card__item-name">Croissant de almendra </p><span class="card__separation"></span><p class="card__item-price">$2</p></li>
-          <li class="card__item">
-            <p class="card__item-name">Pan de banana</p> <span class="card__separation"></span><p class="card__item-price">$1.75</p></li>
-          <li class="card__item">
-            <p class="card__item-name">Tarta de limón</p> <span class="card__separation"></span><p class="card__item-price">$3</p></li>
-          <li class="card__item">
-            <p class="card__item-name">Pastel Blue velvet</p> <span class="card__separation"></span><p class="card__item-price">$3.75</p></li>
-          <li class="card__item">
-            <p class="card__item-name">Cookie web</p> <span class="card__separation"></span><p class="card__item-price">$2</p></li>
-          <li class="card__item">
-            <p class="card__item-name">Baguette fresco</p> <span class="card__separation"></span><p class="card__item-price">$0.25</p></li>
+            <p class="card__item-name"> Amanecer en Bay Area (descafeinado)</p> <span class="card__separation"></span>$10</li>
         </ul>
       </div>
+
+      <div class="card">
+
+          <p class="card__title">Repostería</p>
+          <ul class="  card__content">
+          <li class="card__item">
+            <p class="card__item-name">Croissant de almendra </p><span class="card__separation"></span>$2</li>
+          <li class="card__item">
+            <p class="card__item-name">Pan de banana</p> <span class="card__separation"></span>$1.75</li>
+          <li class="card__item">
+            <p class="card__item-name">Tarta de limón</p> <span class="card__separation"></span>$3</li>
+          <li class="card__item">
+            <p class="card__item-name">Pastel Blue velvet</p> <span class="card__separation"></span>$3.75</li>
+          <li class="card__item">
+            <p class="card__item-name">Cookie web</p> <span class="card__separation"></span>$2</li>
+          <li class="card__item">
+            <p class="card__item-name">Baguette fresco</p> <span class="card__separation"></span>$0.25</li>
+        </ul>
+      </div>
+    </div>
 
   </section>
   <section id="contactos" class="about">
