--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="#reservation" class="nav__link">Reserva una mesa</a>
       </li>
       <li>
-        <a href="#card" class="nav__link">Menu</a>
+        <a href="#menu" class="nav__link">Menu</a>
       </li>
       <li>
         <a href="#contactos" class="nav__link">Contactos</a>
